# idklol-server

./: .dockerignore  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.dev.md  dev.cmd  dev.sh  docker-compose.dev.yml  docker-compose.yml  refresh-token.sh
.github/workflows/: rust.yml
auth/: Cargo.toml  build.rs
auth/proto/: auth.proto
auth/src/: main.rs
auth/src/services/: auth_service.rs  mod.rs
characters/: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  UPDATES.md  build.rs
characters/migrations/: 20260224000001_create_catalog_tables.sql  20260224000002_seed_catalog_data.sql
characters/proto/: characters.proto
characters/src/: lib.rs  main.rs
characters/src/models/: catalog.rs  character.rs  mod.rs
characters/src/repository/: catalog_admin_repository.rs  catalog_repository.rs  character_admin_repository.rs  character_repository.rs  mod.rs  postgres_catalog_admin_repository.rs  postgres_catalog_repository.rs  postgres_character_admin_repository.rs  postgres_character_repository.rs
characters/src/services/: auth.rs  catalog_admin_service.rs  catalog_cache.rs  catalog_service.rs  character_admin_service.rs  character_management_service.rs  character_service.rs  mod.rs
chat/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
chat/proto/: chat.proto
chat/src/: main.rs
chat/src/services/: chat_service.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/auth/: interceptor.rs  token_validator_service.rs
common/src/auth/jwt/: jwt_validator_service.rs
common/src/cli/: service_command_interface.rs
common/src/config/: env_config.rs
common/src/db/: mod.rs
common/src/logging/: logger_service.rs
common/src/runtime/: mod.rs
docs/contracts/npc-metadata/v1/: README.md  npc.meta.batch_get.request.schema.json  npc.meta.batch_get.response.schema.json  npc.meta.by_zone.request.schema.json  npc.meta.by_zone.response.schema.json  npc.meta.error.response.schema.json  npc.meta.get.request.schema.json  npc.meta.get.response.schema.json  npc.meta.interaction_context.response.schema.json  npc.meta.npc_collection.response.schema.json  npc.meta.npc_full.schema.json  npc.meta.resolve_context.request.schema.json  (+1 more)
docs/developer/: NPC_SYSTEM_DEVELOPER_GUIDE.md
docs/implementation-plans/: npc-server-authoritative-integration-plan.md
keycloak/: Dockerfile  README.md  dev-token-init.sh  realm-config.json
npc-interactions-bridge/: Cargo.toml  Dockerfile  Dockerfile.dev  HARNESS.md
npc-interactions-bridge/prompts/: README.md
npc-interactions-bridge/prompts/default/: system.prompt
npc-interactions-bridge/prompts/templates/auto/: system.prompt
npc-interactions-bridge/prompts/templates/families/: README.md  busy-worker-reply.prompt  guard-challenge.prompt  merchant-greeting.prompt
npc-interactions-bridge/reports/: prompt-harness-report-10cycle-gpt5mini-cycle-01.md  prompt-harness-report-10cycle-gpt5mini-cycle-02.md  prompt-harness-report-10cycle-gpt5mini-cycle-03.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-01.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-02.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-03.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-04.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-05.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-06.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-07.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-08.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-09.md  prompt-harness-report-10cycle-gpt5mini-full-cycle-10.md  prompt-harness-report-10cycle-gpt5mini-full.md  prompt-harness-report-10cycle-gpt5mini-reliability-cycle-01.md  prompt-harness-report-10cycle-gpt5mini-reliability-cycle-02.md  prompt-harness-report-10cycle-gpt5mini-reliability-cycle-03.md  prompt-harness-report-10cycle-gpt5mini-rerun-cycle-01.md  prompt-harness-report-10cycle-gpt5mini-rerun-cycle-02.md  prompt-harness-report-1773324339.md  prompt-harness-report-1773326568.md  prompt-harness-report-1773328109.md  prompt-harness-report-1773328998.md  prompt-harness-report-1773329429.md  prompt-harness-report-autocycle-cycle-01.md  prompt-harness-report-autocycle2-cycle-01.md  prompt-harness-report-autocycle2-cycle-02.md  prompt-harness-report-preflight-reliability-check.md  prompt-harness-report-timeout-split-full.md
npc-interactions-bridge/src/: main.rs  prompt_store.rs
npc-metadata-service/: Cargo.toml  Dockerfile  Dockerfile.dev
npc-metadata-service/migrations/: 20260318000001_create_npc_tables.sql  20260318000002_seed_pilot_zone.sql  20260319000003_add_visual_spawn_fields.sql
npc-metadata-service/src/: main.rs
npc-metadata-service/src/handlers/: meta_batch_get.rs  meta_by_zone.rs  meta_delete.rs  meta_get.rs  meta_list.rs  meta_resolve_context.rs  meta_upsert.rs  mod.rs
npc-metadata-service/src/models/: mod.rs  npc.rs
npc-metadata-service/src/repository/: mod.rs  npc_repository.rs
observability/otel-collector/: config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: config.yml
observability/tempo/: config.yml
postgres-init/: 01_create_databases.sql
webadmin/: .env.example  Dockerfile  Dockerfile.dev  README.md  auth.ts  middleware.ts  next-auth.d.ts  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
webadmin/app/: globals.css  layout.tsx  page.tsx  providers.tsx
webadmin/app/admin/: layout.tsx  page.tsx
webadmin/app/admin/catalog/: page.tsx
webadmin/app/components/: SessionMonitor.tsx
webadmin/app/hooks/: useCatalogVersion.ts
webadmin/app/signin/: page.tsx
webadmin/app/unauthorized/: page.tsx
webadmin/lib/: api-error-handler.ts  keycloak-admin.ts  nats-client.ts
world/: Cargo.toml  build.rs
world/proto/: world.proto
world/src/: main.rs
world/src/services/: mod.rs  world_service.rs
(+26 files in other folders)
