[package]
name = "idklol-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14"
tonic-prost = "*"
chrono = "0.4.42"

# local
idklol-common = { path = "../common" }
tonic = "0.14.2"

[build-dependencies]
tonic-prost-build = "*"