[package]
name = "idklol-characters"
version = "0.1.0"
edition = "2024"

[lib]
name = "characters_core"
path = "src/lib.rs"

[[bin]]
name = "characters-grpc"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "characters-admin"
path = "src/bin/admin_nats_server.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1"}
prost = "0.12"
tonic = "0.10"
tonic-prost = "*"
h2 = { version = "0.4" }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-nats = "0.36"
futures = "0.3"

# local
[dependencies.idklol-common]
path = "../common"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"