[package]
name = "idklol-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1"}
prost = "0.14"
tonic = "0.14.2"
tonic-prost = "*"
h2 = { version = "0.4" }
chrono = "0.4.42"

# local
[dependencies.idklol-common]
path = "../common"

[build-dependencies]
tonic-prost-build = "*"