[package]
name = "idklol-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1"}
prost = "0.12"
tonic = "0.10"
tonic-prost = "*"
h2 = { version = "0.4" }
chrono = "0.4.42"
tracing = "0.1"

# local
[dependencies.idklol-common]
path = "../common"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"