[package]
name = "idklol-common"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
base64 = "0.22"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tonic = { version = "0.10", features = ["transport"] }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread", "io-util", "sync"] }
tower = "0.4"

