[package]
name = "idklol-npc-interactions-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "npc-interactions-bridge"
path = "src/main.rs"

[[bin]]
name = "npc-bridge-harness"
path = "src/bin/npc_bridge_harness.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
async-nats = "0.36"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }
dotenvy = "0.15"

[dependencies.idklol-common]
path = "../common"