[package]
name = "idklol-npc-metadata-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "npc-metadata-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
async-nats = "0.36"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.idklol-common]
path = "../common"

[dev-dependencies]
jsonschema = "0.18"
